# pencil_platform

./: .gitignore  README.md  Snakefile  inspect_var.py  main.py  pyproject.toml  snakemake_config.yaml  test_comparison.ps1
config/shocktube_base/: analytical.yaml  unit_system.yaml
config/shocktube_closelook/: analysis_config.yaml
config/shocktube_phase1_highres/: analysis_config.yaml
config/shocktube_phase1_long/: analysis_config.yaml
config/shocktube_phase2/: README.md  analysis_config.yaml
config/shocktube_phase2_long/: analysis_config.yaml
docs/: analysis-and-visualization.md  cli-reference.md  contributing.md  deployment.md  error-norms-analysis.md  flag-combinations-reference.md  index.md  installation.md  job-monitoring.md  quick_reference_base_swap.md  quickstart.md  troubleshooting.md
docs/api/: index.md
docs/refactor/: 05-TESTING-STRATEGY.md  COMPARISON_LOG.md  SETUP-INSTRUCTIONS.md
docs/user-guide/: base-experiments.md  index.md  parameter-sweeps.md
notebooks/: README.md  discovery_example.ipynb  discovery_visualization.py  interactive_data_explorer.ipynb  mind_the_gap_example.ipynb  mind_the_gap_jupyter.py  spacetime_error_visualization.py
runs/shocktube_phase1/: run_manifest.txt  submit_suite.sh
scripts/: execute_simulation.sh
src/: advanced_analysis.py  analysis.py  analysis_organizer.py  constants.py  error_analysis.py  experiment_name_decoder.py  job_manager.py  post_processing.py  suite_generator.py  video_generation.py  visualization.py  visualization_collage.py
src/analysis/: data_prep.py  errors.py  metrics.py  organizer.py  (+2 more)
(+217 files in other folders)
